--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "mongoose": "^6.9.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
+    "popper": "^1.0.1"
   }
 }
